fix z-index issue with header

--- a/styles/index.css
+++ b/styles/index.css
@@ -484,6 +484,7 @@ a {
     display: flex;
     justify-content: space-between;
     width: 15vw;
+    z-index: 2;
   }
 
   .social-link {
